--- a/cadastro.html
+++ b/cadastro.html
@@ -1,47 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aurum Lab - Cadastro</title>
-    <link rel="stylesheet" href="styles/cadastro.css">
-    <link rel="stylesheet" href="styles/global.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aurum Lab - Cadastro</title>
+  <link rel="stylesheet" href="styles/cadastro.css">
+  <link rel="stylesheet" href="styles/global.css">
 </head>
-
 <body>
-    <header>
-        <div>
-            <h2>Cadastro</h2>
-            <p>Crie uma nova conta de usuário para o Aurum Lab</p>
-        </div>
-        <img src="assets/img/icone-logo.svg" alt="">
-    </header>
-    <main class="container-cadastro">
-        <form class="form-cadastro" action="#" method="post">
-            <div class="campo-1">
-                <label for="nome">Nome Completo</label>
-                <input type="text" id="nome" name="nome" required>
-                <label for="email">E-mail</label>
-                <input type="email" id="email" name="email" required>
+  <header>
+    <div>
+        <h1>Cadastro</h1>
+        <p>Crie uma nova conta de usuário para o Aurum Lab</p>
+    </div>
+    <img src="assets/img/icone-logo.svg" alt="Logotipo Aurum Lab" class="logo">
+  </header>
+  <main>
+    <form>
+        <section class="cadastro">
+            <!-- Lado Esquerdo -->
+            <div>
+                <label for="nome">Nome Completo:</label>
+                <input type="text" id="nome" placeholder="Seu nome" required>
+                
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" placeholder="email@email.com" required>
+                <p class="vazio">A senha deve conter letras, números e caracteres especiais para maior segurança.</p>
             </div>
-            <div class="campo-2">
-                <label for="senha">Senha</label>
-                <input type="password" id="senha" name="senha" required>
-                <label for="confirmar-senha">Confirmar Senha</label>
-                <input type="password" id="confirmar-senha" name="confirmar-senha" required>
+            <!-- Lado Direito -->
+            <div>
+                <label for="senha">Senha:</label>
+                <input type="password" id="senha" placeholder="*********" required>
+                
+                <label for="confirmar-senha">Confirmar Senha:</label>
+                <input type="password" id="confirmar-senha" placeholder="*********" required>
+                <p class="campo-senha">A senha deve conter letras, números e caracteres especiais para maior segurança.</p>
             </div>
-            <div class="botoes">
-                <div class="botao-entrar">
-                    <button type="entrar" class="Entrar">Entrar</button>
-                </div>
-                <div class="botao-voltar">
-                    <button class="voltar">Voltar</button>
-                </div>
-            </div>
-        </form>
-    </main>
-
+          </section>
+        <button type="submit" class="botao-cadastro">ENTRAR</button>
+    </form>
+    <a href="login.html" class="voltar">Voltar</a>
+  </main>
 </body>
-
 </html>
